--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcsh 'Household employees -- Fiction'
 - !lcc 'PQ'
 - !lcsh 'Russia -- Social life and customs -- 19th century -- Fiction'
+- GITenberg
 title: The Little Russian Servant
 url: http://www.gutenberg.org/ebooks/27103
